# moos-ivp-pearl-archive

./: README  README.md
missions/RPi_sim/: pearl.moos
missions/laptop_sim/: pearl.bhv  pearl.moos
missions/pearl_fld/: README  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pEchoVar.moos  plug_pPearlPID.moos  plug_uFldNodeBroker.moos  plug_uProcessWatch.moos
missions/pearl_fld_direct_thrust/: meta_shoreside.moos  plug_origin_warp.moos  plug_uFldNodeBroker.moos
missions/pearl_fld_line/: meta_shoreside.moos  meta_vehicle.bhv  plug_pEchoVar.moos
missions/pearl_fld_old/: plug_uProcessWatch.moos
missions/pearl_fld_simple/: .LastOpenedMOOSLogDirectory  README  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_iChargeController.moos  plug_iPEARL.moos  plug_pLogger.moos  plug_pNodeReporter.moos  plug_pPearlPID.moos  targ_pearl.moos
missions/pearl_fld_square/: meta_shoreside.moos  meta_vehicle.bhv  plug_iGPS.moos  plug_pPearlPID.moos
missions/pearl_fld_waypoint/: meta_shoreside.moos  meta_vehicle.bhv  plug_iChargeController.moos  plug_iPEARL.moos  plug_origin_warp.moos  plug_pPearlPID.moos  plug_uFldNodeBroker.moos
missions/pearl_sim/: README  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_iPEARL.moos  plug_pEchoVar.moos  plug_pHelmIvP.moos  plug_pPearlPID.moos  plug_uFldNodeBroker.moos  plug_uProcessWatch.moos  plug_uSimMarine.moos  plug_uSolarHeading.moos
moos-ivp-kfish/.svn/: wc.db
moos-ivp-kfish/releases/: README
moos-ivp-kfish/releases/moos-ivp-kfish-12.2/src/iGPS_KF/: CMakeLists.txt  GPSInstrument.cpp  iGPSMain.cpp
moos-ivp-kfish/trunk/: CMakeLists.txt  README  README_build_options
moos-ivp-kfish/trunk/src/: CMakeLists.txt
moos-ivp-kfish/trunk/src/iOS5000AC/: CiOS5000AC.cpp  CiOS5000AC.h  os5000Info.cpp
moos-ivp-pearl/: CMakeLists.txt  build.sh  build_pearl.sh
moos-ivp-pearl/src/: CMakeLists.txt
moos-ivp-pearl/src/iGPS/: GPS.cpp  GPS.h  GPSInfo.cpp
moos-ivp-pearl/src/lib_NMEAParse/: GPGSAnmea.cpp  GPGSAnmea.h
moos-ivp-pearl/src/lib_gpsParser/: gpsParser.cpp  gpsParser.h
pearl_logs/: PEARL_MOOS_testing_notes.xlsx  ~$PEARL_MOOS_testing_notes.xlsx
pearl_logs/LOG_PEARL_20_3_2021_____09_10_01/: LOG_PEARL_20_3_2021_____09_10_01._moos  LOG_PEARL_20_3_2021_____09_10_01.alog  LOG_PEARL_20_3_2021_____09_10_01.slog  LOG_PEARL_20_3_2021_____09_10_01.ylog
pearl_logs/LOG_PEARL_20_3_2021_____09_13_42/: LOG_PEARL_20_3_2021_____09_13_42._moos  LOG_PEARL_20_3_2021_____09_13_42.slog  LOG_PEARL_20_3_2021_____09_13_42.ylog
pearl_logs/LOG_PEARL_20_3_2021_____09_24_10/: LOG_PEARL_20_3_2021_____09_24_10._moos  LOG_PEARL_20_3_2021_____09_24_10.slog  LOG_PEARL_20_3_2021_____09_24_10.ylog
pearl_logs/LOG_PEARL_20_3_2021_____09_46_38/: LOG_PEARL_20_3_2021_____09_46_38._moos  LOG_PEARL_20_3_2021_____09_46_38.alog  LOG_PEARL_20_3_2021_____09_46_38.slog  LOG_PEARL_20_3_2021_____09_46_38.ylog
pearl_logs/LOG_PEARL_20_3_2021_____09_47_59/: LOG_PEARL_20_3_2021_____09_47_59._moos  LOG_PEARL_20_3_2021_____09_47_59.slog  LOG_PEARL_20_3_2021_____09_47_59.ylog
pearl_logs/LOG_PEARL_20_3_2021_____15_55_33/: LOG_PEARL_20_3_2021_____15_55_33._moos  LOG_PEARL_20_3_2021_____15_55_33.slog  LOG_PEARL_20_3_2021_____15_55_33.ylog
pearl_logs/LOG_PEARL_20_3_2021_____15_59_06/: LOG_PEARL_20_3_2021_____15_59_06._moos  LOG_PEARL_20_3_2021_____15_59_06.slog  LOG_PEARL_20_3_2021_____15_59_06.ylog
pearl_logs/LOG_PEARL_20_3_2021_____16_28_27/: LOG_PEARL_20_3_2021_____16_28_27._moos  LOG_PEARL_20_3_2021_____16_28_27.slog  LOG_PEARL_20_3_2021_____16_28_27.ylog
pearl_logs/LOG_PEARL_20_3_2021_____21_21_22/: LOG_PEARL_20_3_2021_____21_21_22._moos  LOG_PEARL_20_3_2021_____21_21_22.alog  LOG_PEARL_20_3_2021_____21_21_22.slog  LOG_PEARL_20_3_2021_____21_21_22.ylog
pearl_logs/LOG_PEARL_SIMPLE_21_3_2021_____10_50_52/: LOG_PEARL_SIMPLE_21_3_2021_____10_50_52._moos  LOG_PEARL_SIMPLE_21_3_2021_____10_50_52.alog  LOG_PEARL_SIMPLE_21_3_2021_____10_50_52.slog  LOG_PEARL_SIMPLE_21_3_2021_____10_50_52.ylog
pearl_logs/LOG_PEARL_SIMPLE_21_3_2021_____10_52_05/: LOG_PEARL_SIMPLE_21_3_2021_____10_52_05._moos  LOG_PEARL_SIMPLE_21_3_2021_____10_52_05.alog  LOG_PEARL_SIMPLE_21_3_2021_____10_52_05.slog  LOG_PEARL_SIMPLE_21_3_2021_____10_52_05.ylog
pearl_logs/LOG_PEARL_SIMPLE_21_3_2021_____11_10_26/: LOG_PEARL_SIMPLE_21_3_2021_____11_10_26._moos  LOG_PEARL_SIMPLE_21_3_2021_____11_10_26.alog  LOG_PEARL_SIMPLE_21_3_2021_____11_10_26.slog  LOG_PEARL_SIMPLE_21_3_2021_____11_10_26.ylog
pearl_logs/LOG_PEARL_SIMPLE_21_3_2021_____11_27_55/: LOG_PEARL_SIMPLE_21_3_2021_____11_27_55._moos  LOG_PEARL_SIMPLE_21_3_2021_____11_27_55.slog  LOG_PEARL_SIMPLE_21_3_2021_____11_27_55.ylog
pearl_logs/LOG_PEARL_SIMPLE_21_3_2021_____11_31_37/: LOG_PEARL_SIMPLE_21_3_2021_____11_31_37._moos  LOG_PEARL_SIMPLE_21_3_2021_____11_31_37.alog  LOG_PEARL_SIMPLE_21_3_2021_____11_31_37.slog  LOG_PEARL_SIMPLE_21_3_2021_____11_31_37.ylog
pearl_logs/LOG_PEARL_SIMPLE_21_3_2021_____11_34_16/: LOG_PEARL_SIMPLE_21_3_2021_____11_34_16._moos  LOG_PEARL_SIMPLE_21_3_2021_____11_34_16.slog  LOG_PEARL_SIMPLE_21_3_2021_____11_34_16.ylog
pearl_logs/LOG_PEARL_SIMPLE_21_3_2021_____15_50_24/: LOG_PEARL_SIMPLE_21_3_2021_____15_50_24._moos  LOG_PEARL_SIMPLE_21_3_2021_____15_50_24.slog  LOG_PEARL_SIMPLE_21_3_2021_____15_50_24.ylog
pearl_logs/LOG_PEARL_SIMPLE_21_3_2021_____15_56_40/: LOG_PEARL_SIMPLE_21_3_2021_____15_56_40._moos  LOG_PEARL_SIMPLE_21_3_2021_____15_56_40.alog  LOG_PEARL_SIMPLE_21_3_2021_____15_56_40.slog  LOG_PEARL_SIMPLE_21_3_2021_____15_56_40.ylog
pearl_logs/LOG_PEARL_SIMPLE_21_3_2021_____15_57_24/: LOG_PEARL_SIMPLE_21_3_2021_____15_57_24._moos  (+2 more)
scripts/: README
src/: CMakeLists.txt
src/iChargeController/: CMakeLists.txt  ChargeController.cpp  ChargeController.h  ModbusComms.cpp  ModbusComms.h  iChargeControllermain.cpp
(+5800 files in other folders)
